<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/football_field">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/football_ball"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/tittle"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/football_ball"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_futbol_ball"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/description3"/>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tittle"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/audiowide"
                android:gravity="center"
                android:text="@string/team1"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreTeam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/press_start_2p"
                android:gravity="center"
                android:text="@string/scoreTeam1"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/gol_button"
                android:fontFamily="@font/audiowide"
                android:onClick="golTeam1"
                android:text="@string/pointTeam1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:contentDescription="@string/description1"
                android:src="@drawable/ic_tarjeta_amarilla" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="yellowCard1Minus"
                    android:text="@string/minusYellowCard1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/yellowCardTeam1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/yellowCardTeam1"
                    android:textColor="#FFEB3B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/minus_plus_button"
                    android:fontFamily="@font/audiowide"
                    android:onClick="yellowCard1Plus"
                    android:text="@string/plusYellowCard1"
                    android:textSize="18sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:contentDescription="@string/description2"
                android:src="@drawable/ic_tarjeta_roja" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="redCard1Minus"
                    android:text="@string/minusRedCard1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/redCardTeam1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/redCardTeam1"
                    android:textColor="#A80B0B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="redCard1Plus"
                    android:text="@string/plusRedCard1"
                    android:textSize="18sp" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/reset_button"
                android:fontFamily="@font/audiowide"
                android:onClick="resetScoreTeam1"
                android:text="@string/resetTeam1"
                android:textColor="#FFFFFF"
                android:textStyle="italic" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/audiowide"
                android:gravity="center"
                android:text="@string/team2"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreTeam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/press_start_2p"
                android:gravity="center"
                android:text="@string/scoreTeam2"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/gol_button"
                android:fontFamily="@font/audiowide"
                android:onClick="golTeam2"
                android:text="@string/pointTeam2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:contentDescription="@string/description1"
                android:src="@drawable/ic_tarjeta_amarilla" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="yellowCard2Minus"
                    android:text="@string/minusYellowCard2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/yellowCardTeam2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/yellowCardTeam2"
                    android:textColor="#FFEB3B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="yellowCard2Plus"
                    android:text="@string/plusYellowCard2"
                    android:textSize="18sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:contentDescription="@string/description2"
                android:src="@drawable/ic_tarjeta_roja" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="redCard2Minus"
                    android:text="@string/minusRedCard2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/redCardTeam2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/redCardTeam2"
                    android:textColor="#A80B0B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/audiowide"
                    android:background="@drawable/minus_plus_button"
                    android:onClick="redCard2Plus"
                    android:text="@string/plusRedCard2"
                    android:textSize="18sp" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/reset_button"
                android:fontFamily="@font/audiowide"
                android:onClick="resetScoreTeam2"
                android:text="@string/resetTeam2"
                android:textColor="#FFFFFF"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/reset_button"
        android:fontFamily="@font/audiowide"
        android:onClick="resetAll"
        android:text="@string/resetAll"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>